config: 테스트 환경변수 분리 (#37)
* test: 테스트 환경 분리

* chore: application.properties 추가

* chore: properties 를 yml 로 변경, 실행 환경 별로 분리

* chore: maria db dialect 설정

* fix: clob 데이터 저장 타입 수정

* fix: clob 을 text 로 변경

* chore: application.properties 생성하지 않도록 빌드 스크립트 수정

* refactor: final 추가

* test: 테스트 구체화