@@ -9,7 +9,6 @@ import com.gugucon.shopping.item.domain.entity.Product;
 import com.gugucon.shopping.item.dto.response.ProductResponse;
 import com.gugucon.shopping.item.repository.ProductRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -36,7 +35,7 @@ class ProductServiceTest {
         /* given */
         final Pageable pageable = PageRequest.of(0, 20, Direction.DESC, "createdAt");
 
-        List<Product> products = List.of(
+        final List<Product> products = List.of(
             TestUtils.createProduct("치킨", 20000),
             TestUtils.createProduct("피자", 20000),
             TestUtils.createProduct("사케", 30000)
@@ -44,13 +43,13 @@ class ProductServiceTest {
         when(productRepository.findAll(pageable)).thenReturn(new PageImpl<>(products));
 
         /* when */
-        PagedResponse<ProductResponse> productResponses = productService.readAllProducts(pageable);
+        final PagedResponse<ProductResponse> productResponses = productService.readAllProducts(pageable);
 
         /* then */
         final List<String> names = productResponses.getContents()
             .stream()
             .map(ProductResponse::getName)
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(names).containsExactly("치킨", "피자", "사케");
         assertThat(productResponses.getContents()).hasSize(3);
